--- a/examples/fishing/breaching/config/attack/clsattack.yaml
+++ b/examples/fishing/breaching/config/attack/clsattack.yaml
@@ -18,11 +18,11 @@ optim:
   signed: "soft"
   step_size: 0.1
   boxed: True
-  max_iterations: 1 # 24_000
+  max_iterations: 24_000
   step_size_decay: cosine-decay
   warmup: 50
 
-  callback: 1000 # Print objective value every callback many iterations
+  callback: 1 #1000 # Print objective value every callback many iterations
 
 regularization:
   total_variation:
